2013-09-19 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/r_sexptype_traits.h : unsigned int wrapped as REALSXP
        long standing feature request from Murray. 
        * R/Attributes.R : Added the helper demangle and sizeof functions
        * man/demangle.Rd : Documentation for demangle and sizeof

2013-09-18  JJ Allaire  <jj@rstudio.org>

        * R/Attributes.R: Don't search the inline package as a fallback when loading plugins for the the Rcpp::plugins attribute

2013-09-18  Romain Francois <romain@r-enthusiasts.com>

        * vignettes/Rcpp-package.Rnw: Updating the vignette. Setting attributes to TRUE
        by default. 
        * R/Rcpp.package.skeleton.R: Setting attributes to TRUE by default. This is
        what we should encourage people to use. 
        * include/Rcpp/as.h: add as<char> specialization
        * include/Rcpp/sugar/functions/diff.h : rework the implementation of diff
        so that it works even when we don't know the previous value
        * unitTests/runit.sugar.R : 
        * unitTests/cpp/sugar.cpp :
        * include/Rcpp/sugar/functions/range.h : factored out of minmax.h
        * include/Rcpp/sugar/functions/min.h : factored out of minmax.h
        * include/Rcpp/sugar/functions/max.h : factored out of minmax.h
        * TODO : 3 less items
        
2013-09-17  JJ Allaire  <jj@rstudio.org>

	* R/Attributes.R: Call inlineCxxPlugin and Rcpp.plugin.maker without
	qualification rather than with ':::'

2013-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Export RcppLdFlags which is often used to build Rcpp
	* man/RcppLdFlags.Rd: Added required manual page
	* R/Attributes.R: Call RcppLdFlags() via '::' instead of ':::'
	* R/SHLIB.R: Ditto
	* R/inline.R: Ditto

	* vignettes/Rcpp-FAQ.Rnw: Add %\VignetteEngine{highlight::highlight}
	* vignettes/Rcpp-attributes.Rnw: Idem
	* vignettes/Rcpp-extending.Rnw: Idem
	* vignettes/Rcpp-modules.Rnw: Idem
	* vignettes/Rcpp-package.Rnw: Idem